syntax = "proto3";
option go_package = ".;proto";
option java_package = "com.github.go2o.rpc";

message BankCardAddRequest {
  sint64 OwnerId = 1;
  SBankCardInfo Value = 2;
}

message BankCardRequest {
  int64 OwnerId = 1;
  string BankCardNo = 2;
}

message BankCardListResponse {
  sint64 OwnerId = 1;
  repeated SBankCardInfo Value = 2;
}

/** 会员银行卡 */
message SBankCardInfo {
  /** 银行名称 */
  string BankName = 2;
  /** 账户名 */
  string AccountName = 3;
  /** 账号 */
  string AccountNo = 4;
  // 银行编号
  int32 BankId = 5;
  // 银行卡代码
  string BankCode = 6;
  // 快捷支付授权码
  string AuthCode = 7;

  /** 网点名称 */
  string Network = 8;
  /** 状态 */
  sint32 State = 9;
  //更新时间
  sint64 UpdateTime = 10;
}
